@@ -153,6 +153,7 @@ int mqtt3_bridge_connect(struct mosquitto_db *db, struct mosquitto *context)
 	context->clean_session = context->bridge->clean_session;
 	context->in_packet.payload = NULL;
 	context->ping_t = 0;
+	context->bridge->lazy_reconnect = false;
 	mqtt3_bridge_packet_cleanup(context);
 	mqtt3_db_message_reconnect_reset(context);
 
